--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,22 +1,33 @@
 :root {
+  /* Sizes for gutters, gaps, font-size etc. */
+
+  --ratio: 1.25;
+  --s-5: calc(var(--s-4) / var(--ratio));
+  --s-4: calc(var(--s-3) / var(--ratio));
+  --s-3: calc(var(--s-2) / var(--ratio));
+  --s-2: calc(var(--s-1) / var(--ratio));
+  --s-1: calc(var(--s0) / var(--ratio));
+  --s0: 1rem;
+  --s1: calc(var(--s0) * var(--ratio)); /* 1.25rem */
+  --s2: calc(var(--s1) * var(--ratio)); /* 1.5625 rem etc */
+  --s3: calc(var(--s2) * var(--ratio));
+  --s4: calc(var(--s3) * var(--ratio));
+  --s5: calc(var(--s4) * var(--ratio));
+  --s6: calc(var(--s5) * var(--ratio));
+  --s7: calc(var(--s6) * var(--ratio));
+  --s8: calc(var(--s7) * var(--ratio));
+
   /* Colours */
 
-  --clr-primary: hsl(217, 54%, 11%);
-  --clr-secondary: hsl(216, 50%, 16%);
-  --clr-tertiary: hsl(215, 32%, 27%);
-  --clr-important: hsl(0, 0%, 100%);
-  --clr-strong: hsl(178, 100%, 50%);
-  --clr-content: hsl(215, 51%, 70%);
+  --clr-primary: hsl(177, 68%, 64%);
+  --clr-secondary: hsl(12, 94%, 65%);
+  --clr-tertiary: hsl(33, 100%, 70%);
+  --clr-neutral-100: hsl(20, 33%, 98%);
+  --clr-neutral-900: hsl(244, 23%, 12%);
 
   /* Font families */
 
-  --ff-primary: "Outfit", sans-serif;
-
-  /* Font sizes */
-
-  --fs-sm: 1rem;
-  --fs-md: 1.125rem;
-  --fs-lg: 1.375rem;
+  --ff-primary: "IBM Plex Sans", sans-serif;
 
   /* Font weights */
 
@@ -24,15 +35,16 @@
   --fw-reg: 400;
   --fw-semibold: 600;
 
-  /* Gutters */
+  /* Layout variables  */
 
-  --g-xs: 0.5rem;
-  --g-sm: 1rem;
-  --g-md: 1.5rem;
-  --g-lg: 2rem;
+  /* Defines the max inline size (aka width in ltr) of content in .center used to center content. */
+  --content-size-inline: ;
+
+  /* Defines the gap between children in a stack. */
+  --stack-gap: ;
 
   /* Radii */
 
-  --rad-sm: 0.5rem;
+  --rad-sm: 0.625rem;
   --rad-md: 0.9375rem;
 }
