--- a/styles/global.css
+++ b/styles/global.css
@@ -104,10 +104,268 @@ select {
 |3| BASIC ELEMENTS
 ==============================*/
 
-/*==============================
-|4| COMPONENT A
-==============================*/
+body {
+  font-family: var(--ff-primary);
+  color: var(--clr-neutral-900);
+  background: 
+  url('../assets/bg-pattern-1.svg'), 
+  url('../assets/bg-oval-top-left.png'), 
+  url('../assets/bg-oval-top-right-1.png'), 
+  url('../assets/bg-oval-top-right-2.png'),
+  url('../assets/bg-oval-top-left.png');
+  background-position: 
+  top calc(-1 * (clamp(2rem, 1.19vw + 1.429rem, 2.5rem))) right calc(-1 * (clamp(0rem, -5.357vw + 4.821rem, 2.25rem))), 
+  top -10vw left -10rem, 
+  top 4.25rem right clamp(2.5rem, 17.262vw + -5.786rem, 9.75rem), 
+  top 18.1875rem right clamp(2.5rem, 17.262vw + -5.786rem, 9.75rem), 
+  bottom 11.625rem right -2rem;
+  background-repeat: no-repeat;
+  background-size: 
+  clamp(9.375rem, 17.234vw + 3.989rem, 19.5rem), 
+  23.4375rem, 
+  23.4375rem, 
+  23.4375rem,
+  23.4375rem;
+}
+
+/* Needs to increase in size from 2.5rem to 5.5rem */
+h1 {
+  font-size: clamp(2.5rem, 4.507vw + 1.444rem, 5.5rem);
+  letter-spacing: -1px;
+  line-height: clamp(3rem, 3.756vw + 2.12rem, 5.5rem);
+}
+
+.wrapper {
+  margin-inline: clamp(2.25rem, 19.196vw + -6.964rem, 10.313rem);
+  margin-block-start: clamp(2.5rem, 2.066vw + 2.016rem, 3.875rem);
+  margin-block-end: clamp(5rem, 0.939vw + 4.78rem, 5.625rem);
+}
+
+a {
+  font-weight: var(--fw-semibold);
+  color: inherit;
+  text-decoration: none;
+}
 
 /*==============================
-|5| MEDIA QUERIES
+|4| HEADER
 ==============================*/
+
+.header {
+  --stack-gap: clamp(1.25rem, 1.878vw + 0.81rem, 2.5rem);
+  padding-inline: clamp(0rem, -6.107vw + 2.931rem, 1.5rem);
+}
+
+.logo {
+  max-width: 9.125rem;
+}
+
+.header__title {
+  --stack-gap: clamp(4rem, 5.915vw + 2.614rem, 7.938rem);
+  max-inline-size: clamp(20.438rem, 48.638vw + 9.038rem, 52.813rem);
+}
+
+.header__body {
+  max-inline-size: clamp(32.125rem, 49.256vw + 8.482rem, 52.813rem);
+  font-size: clamp(1.125rem, 0.298vw + 0.982rem, 1.25rem);
+}
+
+/*==============================
+|5| MAIN
+==============================*/
+
+main {
+  background: url('../assets/bg-pattern-2.svg') var(--clr-neutral-900);
+  background-position: left clamp(14.313rem, 15.923vw + 6.67rem, 21rem) top -2rem;
+  background-repeat: no-repeat;
+  background-size: clamp(17.5rem, 4.762vw + 15.214rem, 19.5rem);
+  margin-block-start: clamp(10.375rem, 14.46vw + 6.986rem, 20rem);
+  min-height: 37.5rem;
+  border-radius: 0.75rem;
+}
+
+article {
+  color: var(--clr-neutral-100);
+  position: relative;
+  max-inline-size: 68.75rem;
+}
+
+.app-screenshot {
+  max-inline-size: clamp(13.125rem, 9.577vw + 10.88rem, 19.5rem);
+  transform: translateY(calc(-1 * clamp(6.125rem, 11.08vw + 3.528rem, 13.5rem)));
+  margin-block-end: calc(-1 * (clamp(3rem, 12.582vw + 0.051rem, 11.375rem)));
+  margin-inline-start: clamp(4rem, 5.655vw + 1.286rem, 6.375rem);
+}
+
+.card {
+  background: var(--clr-secondary);
+  max-inline-size: clamp(23.438rem, 6.667vw + 21.875rem, 27.875rem);
+  border-radius: 0.75rem;
+  padding-inline: clamp(2.25rem, 72vw + -14.625rem, 3.375rem);
+  padding-block: 3rem;
+  position: absolute;
+  right: 0;
+  top: clamp(5.625rem, 9.043vw + 2.799rem, 10.938rem);
+  right: clamp(3.625rem, 3.936vw + 2.395rem, 5.938rem);
+}
+
+.card-header {
+  font-size: clamp(2rem, 0.751vw + 1.824rem, 2.5rem);
+}
+
+.card-body {
+  font-size: clamp(1.125rem, 0.298vw + 0.982rem, 1.25rem);
+  --stack-gap: clamp(0.75rem, 0.939vw + 0.53rem, 1.375rem);
+}
+
+.card-body__strong {
+  font-size: 3.25em;
+  font-weight: var(--fw-semibold);
+}
+
+.card-body__callout {
+ --stack-gap: 1.5rem;
+ display: flex;
+ align-items: center;
+ gap: 1rem; 
+}
+
+.card-link {
+  text-decoration: none;
+  --stack-gap: 1rem;
+  cursor: pointer;
+}
+
+.button {
+  --stack-gap: clamp(2rem, 2.083vw + 1rem, 2.875rem);
+  border: none;
+  display: block;
+  inline-size: 100%;
+  border-radius: var(--rad-sm);
+  font-size: 1.125rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+  cursor: pointer;
+}
+
+.button__dark {
+  background: var(--clr-neutral-900);
+  color: var(--clr-neutral-100);
+}
+
+.button__dark:hover,
+.button__dark:focus {
+  background: var(--clr-primary);
+}
+
+.button__light {
+  background: var(--clr-neutral-100);
+  color: var(--clr-neutral-900);
+}
+.button__light:hover,
+.button__light:focus {
+  background: var(--clr-tertiary);
+}
+
+.icon {
+  max-height: 1.125rem;
+  align-self: center;
+}
+
+/*==============================
+|6| FOOTER
+==============================*/
+
+.footer {
+  display: grid;
+  grid-template-columns: 25.5% 22.875rem 1fr;
+  margin-block-start: calc(clamp(5.625rem, 9.043vw + 2.799rem, 10.938rem) + clamp(4rem, 5.852vw + 2.628rem, 5.438rem));
+  padding-inline: clamp(0rem, -6.107vw + 2.931rem, 1.5rem);
+}
+
+.footer-socials {
+  display: flex;
+  gap: 1.25rem;
+  align-self: center;
+  justify-self: end;
+}
+
+.icon-socials {
+  color: inherit;
+}
+
+.icon-socials:hover,
+.icon-socials:focus {
+  color: var(--clr-secondary);
+}
+
+
+@media (max-width: 767px) {
+  
+  main {
+    background-position: center 0;
+  }
+  
+  .wrapper {
+    margin-inline: clamp(0rem, 9.16vw + -2.147rem, 2.25rem);
+  }
+  
+  .card {
+   position: relative;
+   top: 0;
+   right: 0;
+   max-inline-size: 100%;
+  }
+  
+  .app-screenshot {
+    margin-inline: auto;
+    }
+    
+  .footer {
+    margin-block-start: clamp(4rem, 5.852vw + 2.628rem, 5.438rem);
+    grid-template-columns: 22.875rem auto;
+  }
+ 
+ .logo-footer {
+   margin-block-end: 2rem;
+ }
+ 
+  .footer-body {
+    grid-row: 2;
+  }
+  
+  .footer-socials {
+    grid-row: 2;
+  }
+  
+}
+
+@media (max-width: 600px) {
+  
+  body {
+  background: 
+  url('../assets/bg-oval-top-right-1.png'), 
+  url('../assets/bg-oval-top-right-2.png');
+  background-position: 
+  top -104px right -74.6px, 
+  top 95px right -74.6px;
+  background-repeat: no-repeat;
+  background-size: 17.5rem;
+  }
+  
+  .footer {
+    grid-template-columns: 1fr;
+  }
+  
+  .footer-body {
+    grid-row: auto;
+  }
+  
+  .footer-socials {
+    grid-row: auto;
+    justify-self: start;
+    margin-block-start: 4rem;
+  }
+}
