--- a/styles/global.css
+++ b/styles/global.css
@@ -124,10 +124,10 @@ body {
   background-repeat: no-repeat;
   background-size: 
   clamp(9.375rem, 17.234vw + 3.989rem, 19.5rem), 
-  23.4375rem, 
-  23.4375rem, 
-  23.4375rem,
-  23.4375rem;
+  47rem, 
+  47rem, 
+  47rem,
+  47rem;
 }
 
 /* Needs to increase in size from 2.5rem to 5.5rem */
@@ -170,6 +170,7 @@ a {
 .header__body {
   max-inline-size: clamp(32.125rem, 49.256vw + 8.482rem, 52.813rem);
   font-size: clamp(1.125rem, 0.298vw + 0.982rem, 1.25rem);
+  line-height: clamp(1.625rem, 0.751vw + 1.449rem, 2.125rem);
 }
 
 /*==============================
@@ -207,7 +208,7 @@ article {
   padding-block: 3rem;
   position: absolute;
   right: 0;
-  top: clamp(5.625rem, 9.043vw + 2.799rem, 10.938rem);
+  top: clamp(5.625rem, -8.929vw + 13.661rem, 9.375rem);
   right: clamp(3.625rem, 3.936vw + 2.395rem, 5.938rem);
 }
 
@@ -218,6 +219,7 @@ article {
 .card-body {
   font-size: clamp(1.125rem, 0.298vw + 0.982rem, 1.25rem);
   --stack-gap: clamp(0.75rem, 0.939vw + 0.53rem, 1.375rem);
+  line-height: clamp(1.75rem, 0.893vw + 1.321rem, 2.125rem);
 }
 
 .card-body__strong {
@@ -230,6 +232,8 @@ article {
  display: flex;
  align-items: center;
  gap: 1rem; 
+ margin-block-end: 2.875rem;
+ margin-block-start: 2.5rem;
 }
 
 .card-link {
