--- a/styles/global.css
+++ b/styles/global.css
@@ -285,8 +285,10 @@ article {
 ==============================*/
 
 .footer {
-  display: grid;
-  grid-template-columns: 25.5% 22.875rem 1fr;
+  width: 100%;
+  flex-wrap: wrap;
+  display: inline-flex;
+  justify-content: space-between;
   margin-block-start: calc(clamp(5.625rem, 9.043vw + 2.799rem, 10.938rem) + clamp(4rem, 5.852vw + 2.628rem, 5.438rem));
   padding-inline: clamp(0rem, -6.107vw + 2.931rem, 1.5rem);
 }
@@ -334,21 +336,12 @@ article {
     
   .footer {
     margin-block-start: clamp(4rem, 5.852vw + 2.628rem, 5.438rem);
-    grid-template-columns: 22.875rem auto;
   }
  
  .logo-footer {
    margin-block-end: 2rem;
  }
  
-  .footer-body {
-    grid-row: 2;
-  }
-  
-  .footer-socials {
-    grid-row: 2;
-  }
-  
 }
 
 @media (max-width: 600px) {
@@ -363,17 +356,9 @@ article {
   background-repeat: no-repeat;
   background-size: 17.5rem;
   }
-  
-  .footer {
-    grid-template-columns: 1fr;
-  }
-  
-  .footer-body {
-    grid-row: auto;
-  }
+
   
   .footer-socials {
-    grid-row: auto;
     justify-self: start;
     margin-block-start: 4rem;
   }
